--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+baconqrcode (1.0.1-2) stable; urgency=medium
+
+  * add missing php-gd dependency
+  * correct install path
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Mon, 07 Aug 2017 14:15:27 +0200
+
 baconqrcode (1.0.1-1) stable; urgency=medium
 
   * initial release
