--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+baconqrcode (1.0.1-4) stable; urgency=medium
+
+  * fix lintian errors and warnings
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Fri, 13 Oct 2017 13:47:22 +0200
+
 baconqrcode (1.0.1-3) stable; urgency=medium
 
   * fix architecture
