--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+baconqrcode (1.0.3-1) stable; urgency=medium
+
+  [ Gijs Molenaar ]
+  * New upstream version 1.0.3
+
+  [ Gijs Molenaar (launchpad ppa build key) ]
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 24 Oct 2017 07:44:16 +0200
+
 baconqrcode (1.0.1-4) stable; urgency=medium
 
   * fix lintian errors and warnings
